# operator-monitor

./: .dockerignore  .gitignore  .gitmodules  CALLDATA_DECODING.md  CLAUDE.md  Dockerfile  README-Docker.md  README.md  debug_monitor.py  docker-compose.yml  example_taiyi_monitor.py  pyproject.toml  registry_event_monitor.py  run_monitor.py  slack_messenger.py
.cursor/rules/: connection-management.mdc  core-architecture.mdc  event-processing.mdc  notifications.mdc
operator-monitor/cli/: __init__.py  main.py
operator-monitor/config/: settings.py
operator-monitor/data/: event_store.py
operator-monitor/notifications/: base_notifier.py  slack_notifier.py
operator-status/: CLAUDE.md  README.md  config.py  database.py  models.py  redis_client.py
operator_monitor/: __init__.py
operator_monitor/cli/: main.py
operator_monitor/config/: contract_abi.py  networks.py  settings.py
operator_monitor/core/: calldata_decoder.py  contract_interface.py  event_processor.py  web3_client.py
operator_monitor/data/: __init__.py  event_fetcher.py  redis_event_store.py
operator_monitor/monitor/: __init__.py  event_monitor.py  reconnection_handler.py
operator_monitor/notifications/: notification_manager.py
operator_status/: CLAUDE.md  api_models.py  delegation_parser.py  http_server.py  main.py  services.py  start_server.py  validator_info.py
registry_monitor/: __init__.py
registry_monitor/cli/: commands.py  main.py
registry_monitor/config/: __init__.py  contract_abi.py  networks.py  settings.py
registry_monitor/core/: __init__.py  contract_interface.py  (+2 more)
(+4 files in other folders)
