[project]
name = "operator-monitor"
version = "0.1.0"
description = "Ethereum operator monitoring and validator delegation checking tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.0",
    "slack-sdk>=3.35.0",
    "web3>=7.12.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "typer>=0.15.1",
    "rich>=14.0.0",
    "eth-account>=0.13.7",
    "py-ecc>=8.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.0",
]
